logs/build_2025-11-09_23-30.log
Compilation de D:\BOSSY\cours\L3\S5\Mr_Naina\framework\MyFramework\src\com\nandrianina\framework\FrontServlet.java 
D:\BOSSY\cours\L3\S5\Mr_Naina\framework\MyFramework\src\com\nandrianina\framework\FrontServlet.java:28: error: unmappable character (0x8D) for encoding windows-1252
            System.out.println("ðŸ”? Scanning package: " + packageToScan);
                                   ^
D:\BOSSY\cours\L3\S5\Mr_Naina\framework\MyFramework\src\com\nandrianina\framework\FrontServlet.java:101: error: unmappable character (0x9D) for encoding windows-1252
                out.println("<h2>â?Œ Erreur lors de l'exÃ©cution</h2>");
                                  ^
D:\BOSSY\cours\L3\S5\Mr_Naina\framework\MyFramework\src\com\nandrianina\framework\FrontServlet.java:114: error: unmappable character (0x90) for encoding windows-1252
            out.println("<p><a href='" + contextPath + "/' style='color:#3498db; text-decoration:none;'>â†? Retour Ã  l'accueil</a></p>");
                                                                                                          ^
3 errors
Compilation de D:\BOSSY\cours\L3\S5\Mr_Naina\framework\MyFramework\src\com\nandrianina\framework\annotation\Controller.java 
Compilation de D:\BOSSY\cours\L3\S5\Mr_Naina\framework\MyFramework\src\com\nandrianina\framework\annotation\Get.java 
Compilation de D:\BOSSY\cours\L3\S5\Mr_Naina\framework\MyFramework\src\com\nandrianina\framework\mapping\Mapping.java 
Compilation de D:\BOSSY\cours\L3\S5\Mr_Naina\framework\MyFramework\src\com\nandrianina\framework\util\PackageScanner.java 
D:\BOSSY\cours\L3\S5\Mr_Naina\framework\MyFramework\src\com\nandrianina\framework\util\PackageScanner.java:3: error: package com.nandrianina.framework.annotation does not exist
import com.nandrianina.framework.annotation.Controller;
                                           ^
D:\BOSSY\cours\L3\S5\Mr_Naina\framework\MyFramework\src\com\nandrianina\framework\util\PackageScanner.java:4: error: package com.nandrianina.framework.annotation does not exist
import com.nandrianina.framework.annotation.Get;
                                           ^
D:\BOSSY\cours\L3\S5\Mr_Naina\framework\MyFramework\src\com\nandrianina\framework\util\PackageScanner.java:5: error: package com.nandrianina.framework.mapping does not exist
import com.nandrianina.framework.mapping.Mapping;
                                        ^
D:\BOSSY\cours\L3\S5\Mr_Naina\framework\MyFramework\src\com\nandrianina\framework\util\PackageScanner.java:24: error: cannot find symbol
    public static Map<String, Mapping> scanControllers(String packageName) throws Exception {
                              ^
  symbol:   class Mapping
  location: class PackageScanner
D:\BOSSY\cours\L3\S5\Mr_Naina\framework\MyFramework\src\com\nandrianina\framework\util\PackageScanner.java:25: error: cannot find symbol
        Map<String, Mapping> urlMappings = new HashMap<>();
                    ^
  symbol:   class Mapping
  location: class PackageScanner
D:\BOSSY\cours\L3\S5\Mr_Naina\framework\MyFramework\src\com\nandrianina\framework\util\PackageScanner.java:44: error: cannot find symbol
            if (clazz.isAnnotationPresent(Controller.class)) {
                                          ^
  symbol:   class Controller
  location: class PackageScanner
D:\BOSSY\cours\L3\S5\Mr_Naina\framework\MyFramework\src\com\nandrianina\framework\util\PackageScanner.java:49: error: cannot find symbol
                    if (method.isAnnotationPresent(Get.class)) {
                                                   ^
  symbol:   class Get
  location: class PackageScanner
D:\BOSSY\cours\L3\S5\Mr_Naina\framework\MyFramework\src\com\nandrianina\framework\util\PackageScanner.java:50: error: cannot find symbol
                        Get getAnnotation = method.getAnnotation(Get.class);
                        ^
  symbol:   class Get
  location: class PackageScanner
D:\BOSSY\cours\L3\S5\Mr_Naina\framework\MyFramework\src\com\nandrianina\framework\util\PackageScanner.java:50: error: cannot find symbol
                        Get getAnnotation = method.getAnnotation(Get.class);
                                                                 ^
  symbol:   class Get
  location: class PackageScanner
D:\BOSSY\cours\L3\S5\Mr_Naina\framework\MyFramework\src\com\nandrianina\framework\util\PackageScanner.java:54: error: cannot find symbol
                        Mapping mapping = new Mapping(clazz.getName(), method.getName());
                        ^
  symbol:   class Mapping
  location: class PackageScanner
D:\BOSSY\cours\L3\S5\Mr_Naina\framework\MyFramework\src\com\nandrianina\framework\util\PackageScanner.java:54: error: cannot find symbol
                        Mapping mapping = new Mapping(clazz.getName(), method.getName());
                                              ^
  symbol:   class Mapping
  location: class PackageScanner
11 errors
